fix: remove overflow:hidden from intro - was clipping sphere canvas

--- a/portfolio-master/portfolio-master/app/routes/home/intro.module.css
+++ b/portfolio-master/portfolio-master/app/routes/home/intro.module.css
@@ -5,7 +5,6 @@
   justify-content: center;
   flex-direction: column;
   position: relative;
-  overflow: hidden;
 }
 
 .text {
